<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.fanrir.myappportfolio.MainActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/twenty_four_dp"
            android:text="@string/my_nanodegree_apps"
            android:textAppearance="?android:textAppearanceLarge"/>

        <Button
            android:id="@+id/popular_movies_button"
            style="@style/AppButtonStyle"
            android:text="@string/popular_movies"
            />

        <Button
            android:id="@+id/stock_hawk_button"
            style="@style/AppButtonStyle"
            android:text="@string/stock_hawk"
            />

        <Button
            android:id="@+id/build_it_bigger_button"
            style="@style/AppButtonStyle"
            android:text="@string/build_it_bigger"
            />

        <Button
            android:id="@+id/make_your_app_material_button"
            style="@style/AppButtonStyle"
            android:text="@string/make_your_app_material"
            />

        <Button
            android:id="@+id/go_ubiquitous_button"
            style="@style/AppButtonStyle"
            android:text="@string/go_ubiquitous"
            />

        <Button
            android:id="@+id/capstone_button"
            style="@style/AppButtonStyle"
            android:text="@string/capstone"
            />
    </LinearLayout>

</ScrollView>